Completed the Login and Registration functionalities.

--- a/ABC_Car_Traders/AdminDashboard.resx
+++ b/ABC_Car_Traders/AdminDashboard.resx
@@ -1204,4 +1204,7 @@
         jMuSxYyEmqr5auCTqx2EdYsZCTVV8xuNRqPRaPwvTE39Ac5GyHVs5kTJAAAAAElFTkSuQmCC
 </value>
   </data>
+  <metadata name="timerDateTime.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
 </root>
