--- a/ABC_Car_Traders/CustomerDashboardCarPartsOrderForm.resx
+++ b/ABC_Car_Traders/CustomerDashboardCarPartsOrderForm.resx
@@ -118,127 +118,6 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="pictureBox9.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        DAAACwwBP0AiyAAAAldJREFUWEftls1vDWEUxm+1YdHyN2giWFiorTRCoqgd1jYSW+kCOx8LibAq6v/A
-        uhZNw4KdaEkbEcT3BrWQkON35jzN22a+772xkP6SJ5l5zsecO+/MO7ezQS+Y0Om/R9f/Tweg7y4dlhKX
-        rx+AlD06bAYFU+gnOiirEOIZOi2E8H60gi7IqobECfRbmpRdCPEMnRZCeBL9kY7LLoaEzegVcs7LLkV5
-        TZbgYmTaa7RFdh6C57I0sydoQHYpkdpogAH0NEtmeWWvh8Ag+pClmB2WXYlyawdwSDsS2fYRDcpOYI5n
-        YbNnsmpRfqMBHFKfR4WNy0pg3oyYXZNVi/LbDHA9KuyGrATmXMSqX721KL/NAIeiwuZkJTCXI2ajsmpR
-        fpsBdkSFLclKYPpm4QzLqkX5bQYYjgpbkZXA/B4xG5FVi/LbDLAtKuybrATmy4jZTll9h9674xK2KCuB
-        +TBidlRW36G3b8vOrKwE5tWI2W1ZfYfed+MSdklWAnNfxOwNyu9UPULPIfTWLwB7ZScwfb9+kYXNzsju
-        G/Q8G61tQVYegqcix96hrbJ7hl7+9L/3xnBCdh6CfhceZ2lm99AmhbrGe6D73hDmUfVXloRR9MWzYRp1
-        PYTXolveCD6j7QpVQ+IB9MurwO9E6+Wgxm/7A28A3iv/BayCAv8v98mrwaf3PytDCpdCjv/q02h1zb+i
-        xh+4dVDoy/HIuwh/je6gY8h3tRHJj32TmUGrr5rja97stpdBA38wT6JF1JQFVP60dwtNx9AVNIt8oB+S
-        H7t3GeU3mQ1K6XT+AnVsTpm6SL5RAAAAAElFTkSuQmCC
-</value>
-  </data>
-  <data name="pictureBox8.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        DAAACwwBP0AiyAAAAk9JREFUaEPtlj1uFEEQhRck24EDbMkBEiZHwtwFCcl3IOMQhsj34AJgMsQBSECI
-        gAsgSElI+HnV/Y217t2dmRqmlrLkT3racU+/qlfanlkvbrhO/Inls3SXVrHUfqFsZ5jaK4wPS59HtIyh
-        9gnjUHpfL4O/mdojBupvZ5haPwZabGeYWjsGWhT0Z+wwtW4MtLhES3HD1Jox0OIKWo4ZptaLgRYr6Nb8
-        w9RaMdBiLbo97zC1Tgy02Ii2zDdMrREDLXrRtiPp8j8Alv1QIA3E8oM/DcTygz8NxPKDPw3E8oM/DcTy
-        gz8NxPKDPw3E8oM/DcTyg39bvJLuScfShS20EMsP/rEMBhngmLbW935dugq3/eAfy2CQHn5LB9j/6yDf
-        pF1s5tuXftqNkZxh7YZ4U1Yb2OIH/xA2xAn7d6RbXJ9Kv6QhXku3Ue+RtLqTwN/Hd+kRex9IX6VP0iFr
-        T6U+vkjlSOnzRVnpwfZNAv8m1g3R8U7a4955WVnlh9R9k48le056sb2TwN/SvZ122HMi2fFqeSl1R8au
-        l7HQT/A/lGyoQWz/JPC3LL+ddqV1Q3Scs29PeltWKs9ZP5DseI3CPJPA3+J9zT5j7x3po2QPdPdN2YM+
-        mtJ0CvhbLIj96G18TTbYm+uUeuWNZuj6zG56wOoH/xzYb8o+Za2uHanBh7sFux/8c/Evv/wF7H7wz4X3
-        SK5ALD/400AsP/jTQCw/+NNALD/400AsP/jTQCw/+NNALD/400AsP/jTQCw/+NNALD/400AsP/jTQKwb
-        rgGLxV8MqTJpXoAgoQAAAABJRU5ErkJggg==
-</value>
-  </data>
-  <data name="pictureBox7.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        DAAACwwBP0AiyAAAAyBJREFUeF7tmT1rVEEYhQMh8ScEKwWxkPgBWlmriKhYpFaxEzsLsdRGFP+ARvAn
-        iI2NFiZqKbYhhYJVYqEWKkqwiM+58yZFcO/M7MydWXEeOOTe2XfOeW92s844U41Go9FojMfm5uYFtIx+
-        mJbQeXs5O3gXzeuF4HtoFHesLBt4Fs3rhUC9Ez7OWXkyeBXN80KYPoY+Xlp5MngVzfNC2HeX2cs3K08G
-        r6J5XizQi5UnY3ZerHx4yNpwkb1sWHky8nKWvWTL80LYqsvsZcXKk8GraJ4Xwu67zF7uWnkyeBXN80LY
-        bvS1i/07X9CclSeDV9G8IAg8jX4pfQc/0SkrywaeRfOCIPggeor07khP0Ly9nB28i+Y1Go1h4O92cra1
-        odDgLDqOrqNHSA/wAX1GWqnpG3odraDX6CG6hvaYRQf3wdta7vciechLnvJWhrKUqez3SL2oJ/WmHmfN
-        Ig0ZoSvoGdI/N+OwYHZb77yP7W0t1wtuKBr1qp7V+3i/DCbOoDcolUNmKc+obS3Xh91QEvrkzJhlOEy6
-        3E1PZ59ZyjNqW8v1fjeUzEWzDIdJi25uMgfMUp5BWLnq591IMotmGQ6TQj6uIZwxS3lGbWu5PuuGklk2
-        y3CYtObmJnPLLOUZta3l+rYbSmbNLOtCI5O1rS0NDzd529rS8ICTt60tDQ/6b29rabbqWp6sevkEVT2i
-        IqNePgFVj6jwrpqvBqLW8rnBu2q+Gog+ouJ+Gh1BV9Fj9Ap9RPry+23Stcb0mmpUqznTZtPBfd0jMgvw
-        YuWqn0MhTY9Cc7fXBW7Ij5XnB+/YtfxJN5TECbOLzs8O5rFr+ZtuKIkbZhednx3Mo9byXL9zQ0m8Nbvo
-        /OxgHryW5+exbiQPR2PzB4OAoLU81y+60Tw8N9vg/EEhqOpanqx2RNZoNMrAl4vvSGzriEpjei3rEZU8
-        zKtcPhN3odQjMTHWERW19fIpzHUktpOgIyrVoGr5auBSVz4M3iMqaqrmqwEdRQ/FA4sZCTVV89VAyP+6
-        jMuSxYyEmqr5auCTqx2EdYsZCTVV8xuNRqPRaPwvTE39Ac5GyHVs5kTJAAAAAElFTkSuQmCC
-</value>
-  </data>
-  <data name="pictureBox6.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        DAAACwwBP0AiyAAAAXpJREFUaEPt2TFu3EAMhtGtfHQ7uafta2y0kwf+UMRqqjDRA9R8JAY0XO7jdrv9
-        Z57P59vx/Ty+7+P7230d34/je3N+GEzz4fw44oT/xJ++nR8G4zg/9HGcH/o4zg99HOeHPo7zQ29ZKfIW
-        TxR5m2dCb1kp8iK1rJwYFXmRWlYujENvWSnyIrWsnBgVeZFaVi6MQ29ZKfIWTxR5m2dCH8f5oY/j/NDH
-        cX7o4zg/9HGcH/o4zg+9ZaXIWzxR5G2eCb1lpciL1LJyYlTkRWpZuTAOvWWlyIvUsnJiVORFalm5MA69
-        ZaXIWzxR5G2eCX0c54c+jvNDH8f5oY/j/NDHcX7o4zg/9JaVIm/xRJG3eSb0lpUiL1LLyolRkRepZeXC
-        OPSWlSIvUsvKiVGRF6ll5cI49JaVIm/xRJG3eSb0cZwf+jjOD30c54c+jvNDH8f5cbTXD4zTfDo/jvjx
-        ezbKu/PjiK+fp19/zIT/zOfxvR/f9efp2+32L3s8fgGrJs8XldBvOAAAAABJRU5ErkJggg==
-</value>
-  </data>
-  <data name="pictureBox5.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        DAAACwwBP0AiyAAAAWJJREFUSEvtlb0uBFEYhiexEuxKuAGFFqWIkCjUfgqFa3AD2MI1KFQSChGiUbkE
-        jQalYkkUovKTICSL43nPfDvZsTZmJpttdp7kyc55z/m+bya7mQ1ycjoL59woHmIFH/EZazyhshu8wiOc
-        sNLs0GQK3zANVVyyFumhuAev1Qn0xCM4iL0KjD5UNoRjuIXiBYetVToo3PAtnLvEgsWeMHbOljGID8Jd
-        d4pdFieDAj3BK37jjMURZB5bxiAewFt/wLmyxcmg4Disc/sWxbC9PwcLtmZRN63ve9ziRtgs4AJu4hm2
-        kjvcxhWcxKKN9YN3sF184gVOa/C7kjZTib6zdtOZgz/CyxirWMQ1v8pOsz5VDd4Lr2OU7BffHy4z06zP
-        icJuXMZdfECxjiUs+1V2fve5R137G4ogWMQvrEfreTuSCM7rhaS3Vz3qM2dHGmFTReeov0R9phpao1V9
-        cnJy/iEIfgAsSHc/ZCgEqAAAAABJRU5ErkJggg==
-</value>
-  </data>
-  <data name="pictureBox4.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        DAAACwwBP0AiyAAAAWJJREFUSEvtlb0uBFEYhiexEuxKuAGFFqWIkCjUfgqFa3AD2MI1KFQSChGiUbkE
-        jQalYkkUovKTICSL43nPfDvZsTZmJpttdp7kyc55z/m+bya7mQ1ycjoL59woHmIFH/EZazyhshu8wiOc
-        sNLs0GQK3zANVVyyFumhuAev1Qn0xCM4iL0KjD5UNoRjuIXiBYetVToo3PAtnLvEgsWeMHbOljGID8Jd
-        d4pdFieDAj3BK37jjMURZB5bxiAewFt/wLmyxcmg4Disc/sWxbC9PwcLtmZRN63ve9ziRtgs4AJu4hm2
-        kjvcxhWcxKKN9YN3sF184gVOa/C7kjZTib6zdtOZgz/CyxirWMQ1v8pOsz5VDd4Lr2OU7BffHy4z06zP
-        icJuXMZdfECxjiUs+1V2fve5R137G4ogWMQvrEfreTuSCM7rhaS3Vz3qM2dHGmFTReeov0R9phpao1V9
-        cnJy/iEIfgAsSHc/ZCgEqAAAAABJRU5ErkJggg==
-</value>
-  </data>
-  <data name="pictureBox3.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        DAAACwwBP0AiyAAAAyBJREFUeF7tmT1rVEEYhQMh8ScEKwWxkPgBWlmriKhYpFaxEzsLsdRGFP+ARvAn
-        iI2NFiZqKbYhhYJVYqEWKkqwiM+58yZFcO/M7MydWXEeOOTe2XfOeW92s844U41Go9FojMfm5uYFtIx+
-        mJbQeXs5O3gXzeuF4HtoFHesLBt4Fs3rhUC9Ez7OWXkyeBXN80KYPoY+Xlp5MngVzfNC2HeX2cs3K08G
-        r6J5XizQi5UnY3ZerHx4yNpwkb1sWHky8nKWvWTL80LYqsvsZcXKk8GraJ4Xwu67zF7uWnkyeBXN80LY
-        bvS1i/07X9CclSeDV9G8IAg8jX4pfQc/0SkrywaeRfOCIPggeor07khP0Ly9nB28i+Y1Go1h4O92cra1
-        odDgLDqOrqNHSA/wAX1GWqnpG3odraDX6CG6hvaYRQf3wdta7vciechLnvJWhrKUqez3SL2oJ/WmHmfN
-        Ig0ZoSvoGdI/N+OwYHZb77yP7W0t1wtuKBr1qp7V+3i/DCbOoDcolUNmKc+obS3Xh91QEvrkzJhlOEy6
-        3E1PZ59ZyjNqW8v1fjeUzEWzDIdJi25uMgfMUp5BWLnq591IMotmGQ6TQj6uIZwxS3lGbWu5PuuGklk2
-        y3CYtObmJnPLLOUZta3l+rYbSmbNLOtCI5O1rS0NDzd529rS8ICTt60tDQ/6b29rabbqWp6sevkEVT2i
-        IqNePgFVj6jwrpqvBqLW8rnBu2q+Gog+ouJ+Gh1BV9Fj9Ap9RPry+23Stcb0mmpUqznTZtPBfd0jMgvw
-        YuWqn0MhTY9Cc7fXBW7Ij5XnB+/YtfxJN5TECbOLzs8O5rFr+ZtuKIkbZhednx3Mo9byXL9zQ0m8Nbvo
-        /OxgHryW5+exbiQPR2PzB4OAoLU81y+60Tw8N9vg/EEhqOpanqx2RNZoNMrAl4vvSGzriEpjei3rEZU8
-        zKtcPhN3odQjMTHWERW19fIpzHUktpOgIyrVoGr5auBSVz4M3iMqaqrmqwEdRQ/FA4sZCTVV89VAyP+6
-        jMuSxYyEmqr5auCTqx2EdYsZCTVV8xuNRqPRaPwvTE39Ac5GyHVs5kTJAAAAAElFTkSuQmCC
-</value>
-  </data>
-  <data name="pictureBox2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        DAAACwwBP0AiyAAAAftJREFUaEPtmEtKA0EUReMHFDUG3IEDFbfgFxega/CDLkfciE7UgRgnMW5CnYru
-        It5XdROR7q6q7vSrdKAOXEhSt+p5MHY6thKJRCIxMQaDwRsyrfSpYUSmGmokkcZAjbFF1pFj5Br5lhdi
-        Q43xRHiEAU/nkDPkS9ZiwfGlRZ6QU/vwv8gQvNxGbk0hAhwbLPKB7HHLaA+fZsDSDHJjSspwZJBIH1ll
-        3WBfLhYRsDyL3JliMTusF4LOrq3mw5pX5B3psDrCLrlFBFTkbea6CIx+y0Wgs2+r+bDmFckdxDWviICa
-        XADU4BinSJeVDFwPFZlHfswGBTjGKXLOSgauB4kIqKr94XOEU2SDlQxcLyNyYnfUD0c4RZZZycD1MiJy
-        B5BHlKtWm5UMXK+DKFetLVYyYO3VViYPfySnyCUrlcEZ5/YoPTjKKfLMSmXkDHuUHhzlFBEOWSsN9h7Y
-        I3ThOK+I3KKssRoM9nSQTznAQ7R7LaGHBMugKxKh/9CIdq81RG7jj7ilEHTk7STdaHB0sMiQLnKFbCMr
-        yBKyiVwgL0h0qFFapHFQI4mEcI882Id6UENVZIFRhRpeEe913gfP+RtYEmyt5XPEe533wXPGEan1c6QK
-        8rZatA/1oIaqyCOjCjVURaJAjSTSGKhhRBrztbUCPWokEolEIjat1i8hgdgPdJxAagAAAABJRU5ErkJg
-        gg==
-</value>
-  </data>
   <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAlgAAAHgCAYAAAB5FxNZAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
@@ -1109,80 +988,28 @@
         RK5CYII=
 </value>
   </data>
-  <data name="pictureBox11.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        EQAACxEBf2RfkQAAAXpJREFUaEPt2TFu3EAMhtGtfHQ7uafta2y0kwf+UMRqqjDRA9R8JAY0XO7jdrv9
-        Z57P59vx/Ty+7+P7230d34/je3N+GEzz4fw44oT/xJ++nR8G4zg/9HGcH/o4zg99HOeHPo7zQ29ZKfIW
-        TxR5m2dCb1kp8iK1rJwYFXmRWlYujENvWSnyIrWsnBgVeZFaVi6MQ29ZKfIWTxR5m2dCH8f5oY/j/NDH
-        cX7o4zg/9HGcH/o4zg+9ZaXIWzxR5G2eCb1lpciL1LJyYlTkRWpZuTAOvWWlyIvUsnJiVORFalm5MA69
-        ZaXIWzxR5G2eCX0c54c+jvNDH8f5oY/j/NDHcX7o4zg/9JaVIm/xRJG3eSb0lpUiL1LLyolRkRepZeXC
-        OPSWlSIvUsvKiVGRF6ll5cI49JaVIm/xRJG3eSb0cZwf+jjOD30c54c+jvNDH8f5cbTXD4zTfDo/jvjx
-        ezbKu/PjiK+fp19/zIT/zOfxvR/f9efp2+32L3s8fgGrJs8XldBvOAAAAABJRU5ErkJggg==
-</value>
+  <data name="label1.Text" xml:space="preserve">
+    <value>--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------</value>
   </data>
-  <data name="pictureBox12.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        EQAACxEBf2RfkQAAA4BJREFUaEPtl0uoTVEYxy8G3OR6hIFCCuUqMnEZKK9yDeUxZYBkrBgYCIVQhJIB
-        eQ7MmCChiBmGGFCuGHiW5BW237fWf3fPvnfve+/ee+3tlvOrf/usb631/84+5+z1na+lSZMmg4coitrQ
-        GnQc3UJP0Ucp5hOy8RN0Ex1Fq9AY2fw7eBOT0DH0GRXlB7qAJsu2Xkg8G71Fxh90B21HK9AsNNak5bbe
-        xuNQO+pEO9Bt9BsZ9m21a3l9kPShSx9F19EMhXPD3inoqhnBA4XrgYQLfd7oNRqhcGHMA8Xf7hyFq4dk
-        Z3zOaK9CpcHrsLeMjihULSQahb4g+21PU7g0eNlzZbxHwxWuFhJ1oG0aBgPP+8hYq1DfsHBQnvt4b0LG
-        NYXSYUGoc/8smiTbYOA50RLAL5ReV5gIfe6/QzO1vDR4jUbrzFjs1FQSJqo49+8pZjf8zUXC8RwNcUlj
-        CMTn/hsU+tyfp9hFPwzKEpcwhsBpH4/2KVQavA55y+ikxsv9MCjnXTKDgZ1Qdu7bcxHyNz0VbUYdCiUg
-        bnntOZuOFqENyE6+Z2igfJWdM9ziY9Fdhf45vJe56Bzaj0YrbPFlKIGm3OQjH4rWK1QavCqpQ8wtQAni
-        CTtyDTv7R7pgCfCopP/gtZ2EBzWXIF5wwA9dgVmLJriJArC3sv6Dq82lYpPDkP3NLoN98u6b5FpZ/8F1
-        POr1bRg2aZ9UWU4pUZV1yPUfXC/7YRKbuORflmK+ksT9R8g6lOg/uKZ+8Dbx1b8szGMlqKoOJfoPNBS9
-        tEAjtrAnS+Vhc61oj4tms1VrK6tDeCb6D667/LCbtBtJVGDG9kln8RO5E45r8DoUg+dGb+37D672byE+
-        1YyutBv5jux3OQNZu7oXZXFFxkHrUE/w7NV/cL3hItwE6ky7kTyslmljHbJeoXAd6gleA+4/ivIBxQ/f
-        KwvUxAuU7D8MP1eIE9ofog7lZbF7841ooggLtL+KRqk/uvuPGE3kRtttf9k6VITu/iNGE5loWSZa1kje
-        OpTGbtQqG/PJ7j9iiPX1oHZpWSZa10ieOpRFm7Y7GKf3H40QW4nsLO6JP5/7wS9NkKcOZWHfou2dicwr
-        vf8IiXxrR+nDId/aUfpwyLd2lD4c8q0dpQ+HfGtH6cMh30y0LDfanomWhQPPUnUoC/ZW4psJpqXqUBbs
-        rcS3SZP/k5aWvxf+OkgSw7xZAAAAAElFTkSuQmCC
-</value>
-  </data>
-  <data name="pictureBox13.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        EQAACxEBf2RfkQAAA4BJREFUaEPtl0uoTVEYxy8G3OR6hIFCCuUqMnEZKK9yDeUxZYBkrBgYCIVQhJIB
-        eQ7MmCChiBmGGFCuGHiW5BW237fWf3fPvnfve+/ee+3tlvOrf/usb631/84+5+z1na+lSZMmg4coitrQ
-        GnQc3UJP0Ucp5hOy8RN0Ex1Fq9AY2fw7eBOT0DH0GRXlB7qAJsu2Xkg8G71Fxh90B21HK9AsNNak5bbe
-        xuNQO+pEO9Bt9BsZ9m21a3l9kPShSx9F19EMhXPD3inoqhnBA4XrgYQLfd7oNRqhcGHMA8Xf7hyFq4dk
-        Z3zOaK9CpcHrsLeMjihULSQahb4g+21PU7g0eNlzZbxHwxWuFhJ1oG0aBgPP+8hYq1DfsHBQnvt4b0LG
-        NYXSYUGoc/8smiTbYOA50RLAL5ReV5gIfe6/QzO1vDR4jUbrzFjs1FQSJqo49+8pZjf8zUXC8RwNcUlj
-        CMTn/hsU+tyfp9hFPwzKEpcwhsBpH4/2KVQavA55y+ikxsv9MCjnXTKDgZ1Qdu7bcxHyNz0VbUYdCiUg
-        bnntOZuOFqENyE6+Z2igfJWdM9ziY9Fdhf45vJe56Bzaj0YrbPFlKIGm3OQjH4rWK1QavCqpQ8wtQAni
-        CTtyDTv7R7pgCfCopP/gtZ2EBzWXIF5wwA9dgVmLJriJArC3sv6Dq82lYpPDkP3NLoN98u6b5FpZ/8F1
-        POr1bRg2aZ9UWU4pUZV1yPUfXC/7YRKbuORflmK+ksT9R8g6lOg/uKZ+8Dbx1b8szGMlqKoOJfoPNBS9
-        tEAjtrAnS+Vhc61oj4tms1VrK6tDeCb6D667/LCbtBtJVGDG9kln8RO5E45r8DoUg+dGb+37D672byE+
-        1YyutBv5jux3OQNZu7oXZXFFxkHrUE/w7NV/cL3hItwE6ky7kTyslmljHbJeoXAd6gleA+4/ivIBxQ/f
-        KwvUxAuU7D8MP1eIE9ofog7lZbF7841ooggLtL+KRqk/uvuPGE3kRtttf9k6VITu/iNGE5loWSZa1kje
-        OpTGbtQqG/PJ7j9iiPX1oHZpWSZa10ieOpRFm7Y7GKf3H40QW4nsLO6JP5/7wS9NkKcOZWHfou2dicwr
-        vf8IiXxrR+nDId/aUfpwyLd2lD4c8q0dpQ+HfGtH6cMh30y0LDfanomWhQPPUnUoC/ZW4psJpqXqUBbs
-        rcS3SZP/k5aWvxf+OkgSw7xZAAAAAElFTkSuQmCC
-</value>
-  </data>
-  <data name="pictureBox10.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        DAAACwwBP0AiyAAAAyBJREFUeF7tmT1rVEEYhQMh8ScEKwWxkPgBWlmriKhYpFaxEzsLsdRGFP+ARvAn
-        iI2NFiZqKbYhhYJVYqEWKkqwiM+58yZFcO/M7MydWXEeOOTe2XfOeW92s844U41Go9FojMfm5uYFtIx+
-        mJbQeXs5O3gXzeuF4HtoFHesLBt4Fs3rhUC9Ez7OWXkyeBXN80KYPoY+Xlp5MngVzfNC2HeX2cs3K08G
-        r6J5XizQi5UnY3ZerHx4yNpwkb1sWHky8nKWvWTL80LYqsvsZcXKk8GraJ4Xwu67zF7uWnkyeBXN80LY
-        bvS1i/07X9CclSeDV9G8IAg8jX4pfQc/0SkrywaeRfOCIPggeor07khP0Ly9nB28i+Y1Go1h4O92cra1
-        odDgLDqOrqNHSA/wAX1GWqnpG3odraDX6CG6hvaYRQf3wdta7vciechLnvJWhrKUqez3SL2oJ/WmHmfN
-        Ig0ZoSvoGdI/N+OwYHZb77yP7W0t1wtuKBr1qp7V+3i/DCbOoDcolUNmKc+obS3Xh91QEvrkzJhlOEy6
-        3E1PZ59ZyjNqW8v1fjeUzEWzDIdJi25uMgfMUp5BWLnq591IMotmGQ6TQj6uIZwxS3lGbWu5PuuGklk2
-        y3CYtObmJnPLLOUZta3l+rYbSmbNLOtCI5O1rS0NDzd529rS8ICTt60tDQ/6b29rabbqWp6sevkEVT2i
-        IqNePgFVj6jwrpqvBqLW8rnBu2q+Gog+ouJ+Gh1BV9Fj9Ap9RPry+23Stcb0mmpUqznTZtPBfd0jMgvw
-        YuWqn0MhTY9Cc7fXBW7Ij5XnB+/YtfxJN5TECbOLzs8O5rFr+ZtuKIkbZhednx3Mo9byXL9zQ0m8Nbvo
-        /OxgHryW5+exbiQPR2PzB4OAoLU81y+60Tw8N9vg/EEhqOpanqx2RNZoNMrAl4vvSGzriEpjei3rEZU8
-        zKtcPhN3odQjMTHWERW19fIpzHUktpOgIyrVoGr5auBSVz4M3iMqaqrmqwEdRQ/FA4sZCTVV89VAyP+6
-        jMuSxYyEmqr5auCTqx2EdYsZCTVV8xuNRqPRaPwvTE39Ac5GyHVs5kTJAAAAAElFTkSuQmCC
-</value>
-  </data>
-  <metadata name="timerDateTime.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>17, 17</value>
+  <metadata name="Column2.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Column3.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Column4.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Column1.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Column5.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Column6.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Column7.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
   </metadata>
 </root>
