--- a/ABC_Car_Traders/CustomerDashboardDetailsForm.resx
+++ b/ABC_Car_Traders/CustomerDashboardDetailsForm.resx
@@ -117,4 +117,65 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="pictureBox10.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EQAACxEBf2RfkQAAAO1JREFUaEPtzUEGBEEQBdG+/6VnVkVJoYiiiWEesUp+Pn8/5BNNo5FCGo0U0mik
+        kEYjhTQaKaTRSCGNRgppNFJIo5HV2+jnSqOR1dvo50qjkUIajRTSaKSQRiOFNBoppNFIIY1GCmk0Ukij
+        kUIajRTSaKSQRiOFNBpZTafbjX1vptHIajrdbux7M41GCmk0UkijkUIajRTSaGQ1nW439r2ZRiOr6XS7
+        se/NNBoppNFIIY1GCmk0UkijkdV0ut3Y92Yajaym0+3GvjfTaKSQRiOFNBoppNFIIY1GCmk0UkijkUIa
+        jRTSaKTQ3w94ni/eLyA1LDbOZwAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="pictureBox8.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EQAACxEBf2RfkQAAAO1JREFUaEPtzUEGBEEQBdG+/6VnVkVJoYiiiWEesUp+Pn8/5BNNo5FCGo0U0mik
+        kEYjhTQaKaTRSCGNRgppNFJIo5HV2+jnSqOR1dvo50qjkUIajRTSaKSQRiOFNBoppNFIIY1GCmk0Ukij
+        kUIajRTSaKSQRiOFNBpZTafbjX1vptHIajrdbux7M41GCmk0UkijkUIajRTSaGQ1nW439r2ZRiOr6XS7
+        se/NNBoppNFIIY1GCmk0UkijkdV0ut3Y92Yajaym0+3GvjfTaKSQRiOFNBoppNFIIY1GCmk0UkijkUIa
+        jRTSaKTQ3w94ni/eLyA1LDbOZwAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="pictureBox7.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EQAACxEBf2RfkQAAAydJREFUaEPtl0voDVEcxwcLJM+wUEihUGTjsVBehaU8tiyQrBULC6EQilCyIM+F
+        HRskFLHDEgsKsfAsySuvz/e4v9vcc8/878y9Z8a/3E996p4zZ845M3Pn95tf0qVLl17FEFyJR/A6PsL3
+        NX/X/FBrP8RreAiX4zD854zBw/gRbcNF/YZncSz+E6bha9RmfuFN3IJLcAoOr2no9wiciktxK97An6g5
+        9LR0rHLuoTZwBSepo03G4SXUXHfVUSVzUQu/xAHq6BDNYU93ujqq4iRq0V2uFYcDqDkPulYFDMZPqP/2
+        BHVEQu+VLuQt9ldHFczGzX9/RuUO6mJWuVYOemvcX49a+7Jr9UCsuH8KNVdsRqPW+IGZeSV23H+DkzEW
+        Q3E12g3bhkHKiPu31QG64C9om4jhE+yDDVjcf4Wx4/5MdcA5TG8khguwgROoA7tdKw77UXMec60kWYzp
+        TcTwDNZRhFLc13sR8z89HjegQnEIrav3bCLOw7WoyPcYQ5sO+RnrbER13nKt3sEMPI17UC+5sQj9i6lz
+        H9WxxrXiUFYemoN2vulQyFVDsX+QOjqkrPpDkXAf6pg/3rEX1VCCUdofhe1SZv2hY7Zx36Qf6jM7dDCv
+        uvP2JMusP0Zi6GlId6dCB4p4HEWZecjqjwuYXttMznsd7TgLhdUfMfOQX39k3XgXg0MH8voARVl5yK8/
+        +uKzWl/apo6FaAzEneiPSbsJRZl5yK8/tmN6D7Kpw8/AutP+GPM7WoQrIw8Z61BzW/2hrwWLavI51hvm
+        V9T/UhFH5arqbX+MeRFF7DzkE6o/rqL6dBEK2/VNteMKFOk8pFqhkzzkk7v+sAFFfYf28r2o9VXhU2yq
+        P0RocB6PooiRh4o6H5sIDcyjPtxEGYVSKxvqDyM0MI9Gp3moHRvqDyM0MG0r/PFF81DIHahzjR7rD6On
+        F9XF5xb45xTJQ1nqnDSZ9UeaZagN+wPr8bkF/nlF8lCWeoo6V586miuz/oiJv0BVRie0SBVGJ7RIFUYn
+        tEgVRie0SBVGJ7RI2nYJzZU2Op3moSzKmjeTTvNQFmXN26XLf0iS/AF9gIw/M/en5QAAAABJRU5ErkJg
+        gg==
+</value>
+  </data>
+  <data name="pictureBox5.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EQAACxEBf2RfkQAAAydJREFUaEPtl0voDVEcxwcLJM+wUEihUGTjsVBehaU8tiyQrBULC6EQilCyIM+F
+        HRskFLHDEgsKsfAsySuvz/e4v9vcc8/878y9Z8a/3E996p4zZ845M3Pn95tf0qVLl17FEFyJR/A6PsL3
+        NX/X/FBrP8RreAiX4zD854zBw/gRbcNF/YZncSz+E6bha9RmfuFN3IJLcAoOr2no9wiciktxK97An6g5
+        9LR0rHLuoTZwBSepo03G4SXUXHfVUSVzUQu/xAHq6BDNYU93ujqq4iRq0V2uFYcDqDkPulYFDMZPqP/2
+        BHVEQu+VLuQt9ldHFczGzX9/RuUO6mJWuVYOemvcX49a+7Jr9UCsuH8KNVdsRqPW+IGZeSV23H+DkzEW
+        Q3E12g3bhkHKiPu31QG64C9om4jhE+yDDVjcf4Wx4/5MdcA5TG8khguwgROoA7tdKw77UXMec60kWYzp
+        TcTwDNZRhFLc13sR8z89HjegQnEIrav3bCLOw7WoyPcYQ5sO+RnrbER13nKt3sEMPI17UC+5sQj9i6lz
+        H9WxxrXiUFYemoN2vulQyFVDsX+QOjqkrPpDkXAf6pg/3rEX1VCCUdofhe1SZv2hY7Zx36Qf6jM7dDCv
+        uvP2JMusP0Zi6GlId6dCB4p4HEWZecjqjwuYXttMznsd7TgLhdUfMfOQX39k3XgXg0MH8voARVl5yK8/
+        +uKzWl/apo6FaAzEneiPSbsJRZl5yK8/tmN6D7Kpw8/AutP+GPM7WoQrIw8Z61BzW/2hrwWLavI51hvm
+        V9T/UhFH5arqbX+MeRFF7DzkE6o/rqL6dBEK2/VNteMKFOk8pFqhkzzkk7v+sAFFfYf28r2o9VXhU2yq
+        P0RocB6PooiRh4o6H5sIDcyjPtxEGYVSKxvqDyM0MI9Gp3moHRvqDyM0MG0r/PFF81DIHahzjR7rD6On
+        F9XF5xb45xTJQ1nqnDSZ9UeaZagN+wPr8bkF/nlF8lCWeoo6V586miuz/oiJv0BVRie0SBVGJ7RIFUYn
+        tEgVRie0SBVGJ7RI2nYJzZU2Op3moSzKmjeTTvNQFmXN26XLf0iS/AF9gIw/M/en5QAAAABJRU5ErkJg
+        gg==
+</value>
+  </data>
 </root>
