--- a/ABC_Car_Traders/CustomerDashboard.resx
+++ b/ABC_Car_Traders/CustomerDashboard.resx
@@ -133,7 +133,7 @@
   <data name="pictureBox12.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        EAAACxABrSO9dQAAAO9JREFUSEvt1EFqwlAUheEswHmtUCfSQXdScVJ3Em331MUUNxFdQ+0snpf3J1jO
+        DAAACwwBP0AiyAAAAO9JREFUSEvt1EFqwlAUheEswHmtUCfSQXdScVJ3Em331MUUNxFdQ+0snpf3J1jO
         lWofzvLBAbnn5gYUrEY3adt2pRyU/9orS845Fko1nHMsFOOco48clVqZKo/KhlmIc44+UrMy0GybK8eK
         o49MWRlo9pArx4qjj0QvmOXKseLoI1tWBpp95Mqx4ugj6QdN33n6gVPelR8lxDlHX4xzjr4Y5xz9uW/l
         U3lTXpQJSZ/XSurSzi+cc/S9L+WJ6iLtzJVdeqBH5eh7C8Z/0u5zfiRj7Og7jK7GYx1Gjr4Y55y6u/9d
@@ -1087,6 +1087,22 @@
         MAyjzpjAMgzDMAzDqDMmsAzDMAzDMOqMCSzDMAzDMIw6YwLLMAzDMAyjzpjAMgzDMAzDqDMmsAzDMAzD
         MOqMCSzDMAzDMIw6YwLLMAzDMAyjzpjAMgzDMAzDqDMmsAzDMAzDMOqKc/8/dJRSE6V12m8AAAAASUVO
         RK5CYII=
+</value>
+  </data>
+  <data name="pictureBox14.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        DQAACw0B7QfALAAAAldJREFUWEftls1vDWEUxm+1YdHyN2giWFiorTRCoqgd1jYSW+kCOx8LibAq6v/A
+        uhZNw4KdaEkbEcT3BrWQkON35jzN22a+772xkP6SJ5l5zsecO+/MO7ezQS+Y0Om/R9f/Tweg7y4dlhKX
+        rx+AlD06bAYFU+gnOiirEOIZOi2E8H60gi7IqobECfRbmpRdCPEMnRZCeBL9kY7LLoaEzegVcs7LLkV5
+        TZbgYmTaa7RFdh6C57I0sydoQHYpkdpogAH0NEtmeWWvh8Ag+pClmB2WXYlyawdwSDsS2fYRDcpOYI5n
+        YbNnsmpRfqMBHFKfR4WNy0pg3oyYXZNVi/LbDHA9KuyGrATmXMSqX721KL/NAIeiwuZkJTCXI2ajsmpR
+        fpsBdkSFLclKYPpm4QzLqkX5bQYYjgpbkZXA/B4xG5FVi/LbDLAtKuybrATmy4jZTll9h9674xK2KCuB
+        +TBidlRW36G3b8vOrKwE5tWI2W1ZfYfed+MSdklWAnNfxOwNyu9UPULPIfTWLwB7ZScwfb9+kYXNzsju
+        G/Q8G61tQVYegqcix96hrbJ7hl7+9L/3xnBCdh6CfhceZ2lm99AmhbrGe6D73hDmUfVXloRR9MWzYRp1
+        PYTXolveCD6j7QpVQ+IB9MurwO9E6+Wgxm/7A28A3iv/BayCAv8v98mrwaf3PytDCpdCjv/q02h1zb+i
+        xh+4dVDoy/HIuwh/je6gY8h3tRHJj32TmUGrr5rja97stpdBA38wT6JF1JQFVP60dwtNx9AVNIt8oB+S
+        H7t3GeU3mQ1K6XT+AnVsTpm6SL5RAAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="pictureBox10.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
