--- a/ABC_Car_Traders/AdminDashboard.resx
+++ b/ABC_Car_Traders/AdminDashboard.resx
@@ -1109,10 +1109,26 @@
         RK5CYII=
 </value>
   </data>
+  <data name="pictureBox14.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EQAACxEBf2RfkQAAAldJREFUWEftls1vDWEUxm+1YdHyN2giWFiorTRCoqgd1jYSW+kCOx8LibAq6v/A
+        uhZNw4KdaEkbEcT3BrWQkON35jzN22a+772xkP6SJ5l5zsecO+/MO7ezQS+Y0Om/R9f/Tweg7y4dlhKX
+        rx+AlD06bAYFU+gnOiirEOIZOi2E8H60gi7IqobECfRbmpRdCPEMnRZCeBL9kY7LLoaEzegVcs7LLkV5
+        TZbgYmTaa7RFdh6C57I0sydoQHYpkdpogAH0NEtmeWWvh8Ag+pClmB2WXYlyawdwSDsS2fYRDcpOYI5n
+        YbNnsmpRfqMBHFKfR4WNy0pg3oyYXZNVi/LbDHA9KuyGrATmXMSqX721KL/NAIeiwuZkJTCXI2ajsmpR
+        fpsBdkSFLclKYPpm4QzLqkX5bQYYjgpbkZXA/B4xG5FVi/LbDLAtKuybrATmy4jZTll9h9674xK2KCuB
+        +TBidlRW36G3b8vOrKwE5tWI2W1ZfYfed+MSdklWAnNfxOwNyu9UPULPIfTWLwB7ZScwfb9+kYXNzsju
+        G/Q8G61tQVYegqcix96hrbJ7hl7+9L/3xnBCdh6CfhceZ2lm99AmhbrGe6D73hDmUfVXloRR9MWzYRp1
+        PYTXolveCD6j7QpVQ+IB9MurwO9E6+Wgxm/7A28A3iv/BayCAv8v98mrwaf3PytDCpdCjv/q02h1zb+i
+        xh+4dVDoy/HIuwh/je6gY8h3tRHJj32TmUGrr5rja97stpdBA38wT6JF1JQFVP60dwtNx9AVNIt8oB+S
+        H7t3GeU3mQ1K6XT+AnVsTpm6SL5RAAAAAElFTkSuQmCC
+</value>
+  </data>
   <data name="pictureBox11.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        EQAACxEBf2RfkQAAAXpJREFUaEPt2TFu3EAMhtGtfHQ7uafta2y0kwf+UMRqqjDRA9R8JAY0XO7jdrv9
+        DwAACw8BkvkDpQAAAXpJREFUaEPt2TFu3EAMhtGtfHQ7uafta2y0kwf+UMRqqjDRA9R8JAY0XO7jdrv9
         Z57P59vx/Ty+7+P7230d34/je3N+GEzz4fw44oT/xJ++nR8G4zg/9HGcH/o4zg99HOeHPo7zQ29ZKfIW
         TxR5m2dCb1kp8iK1rJwYFXmRWlYujENvWSnyIrWsnBgVeZFaVi6MQ29ZKfIWTxR5m2dCH8f5oY/j/NDH
         cX7o4zg/9HGcH/o4zg+9ZaXIWzxR5G2eCb1lpciL1LJyYlTkRWpZuTAOvWWlyIvUsnJiVORFalm5MA69
@@ -1124,7 +1140,7 @@
   <data name="pictureBox12.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        EQAACxEBf2RfkQAAA4BJREFUaEPtl0uoTVEYxy8G3OR6hIFCCuUqMnEZKK9yDeUxZYBkrBgYCIVQhJIB
+        DwAACw8BkvkDpQAAA4BJREFUaEPtl0uoTVEYxy8G3OR6hIFCCuUqMnEZKK9yDeUxZYBkrBgYCIVQhJIB
         eQ7MmCChiBmGGFCuGHiW5BW237fWf3fPvnfve+/ee+3tlvOrf/usb631/84+5+z1na+lSZMmg4coitrQ
         GnQc3UJP0Ucp5hOy8RN0Ex1Fq9AY2fw7eBOT0DH0GRXlB7qAJsu2Xkg8G71Fxh90B21HK9AsNNak5bbe
         xuNQO+pEO9Bt9BsZ9m21a3l9kPShSx9F19EMhXPD3inoqhnBA4XrgYQLfd7oNRqhcGHMA8Xf7hyFq4dk
@@ -1145,7 +1161,7 @@
   <data name="pictureBox13.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        EQAACxEBf2RfkQAAA4BJREFUaEPtl0uoTVEYxy8G3OR6hIFCCuUqMnEZKK9yDeUxZYBkrBgYCIVQhJIB
+        DwAACw8BkvkDpQAAA4BJREFUaEPtl0uoTVEYxy8G3OR6hIFCCuUqMnEZKK9yDeUxZYBkrBgYCIVQhJIB
         eQ7MmCChiBmGGFCuGHiW5BW237fWf3fPvnfve+/ee+3tlvOrf/usb631/84+5+z1na+lSZMmg4coitrQ
         GnQc3UJP0Ucp5hOy8RN0Ex1Fq9AY2fw7eBOT0DH0GRXlB7qAJsu2Xkg8G71Fxh90B21HK9AsNNak5bbe
         xuNQO+pEO9Bt9BsZ9m21a3l9kPShSx9F19EMhXPD3inoqhnBA4XrgYQLfd7oNRqhcGHMA8Xf7hyFq4dk
